# TEMPLATE-TIAO-2026

1TIAO/FASE4/CTWP/Cap1/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
1TIAO/FASE4/CTWP/Cap1/Ir Além/: README.md
1TIAO/FASE4/CTWP/Cap1/data/: farmtech_soybean_dataset.csv
1TIAO/FASE4/CTWP/Cap1/src/: config.py  dashboard.py  database.py  eda.py  generate_dataset.py  recommendation.py  schema.sql  train.py
1TIAO/FASE4/CTWP/Cap3/: .gitignore  Makefile  README.md  requirements.txt
1TIAO/Global-Solution-1/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
1TIAO/Global-Solution-1/dashboard/: app.py  queries.py
1TIAO/Global-Solution-1/db/: schema.sql
1TIAO/Global-Solution-1/ephemnous/: __init__.py  config.py
1TIAO/Global-Solution-1/ephemnous/core/: __init__.py  forecaster.py  models.py  mpc.py  physics.py
1TIAO/Global-Solution-1/ephemnous/infra/: __init__.py  api.py  db.py  ml_forecaster.py  repo.py
1TIAO/Global-Solution-1/ephemnous/ml/: __init__.py  dataset.py  features.py
1TIAO/Global-Solution-1/ephemnous/ml/models/: metrics.json
1TIAO/Global-Solution-1/ephemnous/services/: __init__.py  control_loop.py
1TIAO/Global-Solution-1/report/: make_figs.py  relatorio.tex
1TIAO/Global-Solution-1/scripts/: compare.py  compare_jobs.py  demo.py  migrate.py  run_node_sim.py  train.py
1TIAO/Global-Solution-1/wokwi/: README.md  diagram.json  wokwi.toml
1TIAO/Global-Solution-1/wokwi/firmware/: firmware.ino
2TIAO/ENTERPRISE CHALLENGE/: README.md
2TIAO/Global-Solution-2/: README.md
(+11 files in other folders)
