[project]
name = "ephemnous"
version = "0.1.0"
description = "Ephemnous (Ephemeris + Nous) - escalonador de IA para um data center em orbita baixa (LEO)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.4",
]

# Dependencias de simulacao/ML por fase
# Fase 2 (forecaster + dataset): numpy, pandas, pyarrow, scikit-learn
[project.optional-dependencies]
ml = ["numpy>=1.26", "pandas>=2.2", "pyarrow>=16", "scikit-learn>=1.5", "matplotlib>=3.8"]
dev = ["httpx>=0.27", "pytest>=8"]
dashboard = ["streamlit>=1.37", "plotly>=5.22", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ephemnous*"]
